--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>TexasHoldem</groupId>
 	<artifactId>TexasHoldem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Sockets</name>
+	<name>TexasHoldem</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -16,23 +16,23 @@
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.5.8.201207111220</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
+  				<groupId>org.jacoco</groupId>
+  				<artifactId>jacoco-maven-plugin</artifactId>
+  				<version>0.7.5.201505241946</version>
+  				<executions>
+    					<execution>
+      						<goals>
+        						<goal>prepare-agent</goal>
+      						</goals>
+    					</execution>
+    					<execution>
+      						<id>report</id>
+      						<phase>test</phase>
+      						<goals>
+        						<goal>report</goal>
+      						</goals>
+    					</execution>
+  				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
