--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 			<artifactId>json</artifactId>
 			<version>20151123</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
