--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,19 @@
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
+    				<artifactId>maven-surefire-plugin</artifactId>
+    				<version>2.12.4</version>
+    				<executions>
+        				<execution>
+            					<id>default-test</id>
+            					<phase>test</phase>
+        	 				<goals>
+                					<goal>test</goal>
+            					</goals>
+        				</execution>
+    				</executions>
+			</plugin>
+			<plugin>
   				<groupId>org.jacoco</groupId>
   				<artifactId>jacoco-maven-plugin</artifactId>
   				<version>0.7.5.201505241946</version>
