--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.0-rc1</version>
+		</dependency>
     </dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
